--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -8,6 +8,7 @@
       /* background: linear-gradient(135deg, #000, #161c20); */
     color: #fff;
     font-family:'Times New Roman', Times, serif;
+    font-weight: 15px;
     
 }
 
@@ -48,10 +49,14 @@
 
 .intro h1 {
   font-size: 60px;
-  font-weight: 20px;
-  font-family:'Courier New', Courier, monospace;
+  font-weight: 25px;
+  font-family:'Dancing Script', cursive;
 }
 
+.highlight {
+  font-weight: 25px;
+  font-family: 'Dancing Script', cursive;
+}
 .intro p {
     font-size: 18px;
     color: white;
@@ -79,10 +84,11 @@
   
 }
 
+
 .skills-section {
   text-align: center;
   padding: 100px 0;
-  color: white;
+  color: #fff;
   
 }
 
@@ -99,8 +105,8 @@
   align-items: flex-start;
   gap: 50px;
   width: 70%;
-  margin: 0 auto;;
-   background: rgba(60, 59, 59, 0.1);
+  margin: 0 auto;
+   background: rgba(60, 59, 59, 0.4);
   backdrop-filter: blur(10px);
   padding: 50px;
   border-radius: 15px;
@@ -197,5 +203,13 @@
   height: auto;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+}
+
+.image h2 {
+  font-family: "Dancing Script", cursive;
+  margin-top: 15px;
+  font-size: 42px;
+  color: #ff6b81;
+  font-weight: 25px;
 }
 
